<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">


    <ImageView
        android:id="@+id/welcome_photo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="228dp"
        android:src="@drawable/notes"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"/>


    <EditText
        android:id="@+id/welcome_screen_EmailAddress_field"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:fontFamily="@font/bitter"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_photo" />
    <EditText
        android:id="@+id/welcome_screen_password_field"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/bitter"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_screen_EmailAddress_field" />

    <Button
        android:id="@+id/welcome_screen_sign_in_button"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="25dp"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toTopOf="@+id/first_time_here"
        app:layout_constraintEnd_toStartOf="@+id/sign_in_with_google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_screen_password_field"
        tools:ignore="UsingOnClickInXml" />


    <Button
        android:id="@+id/sign_in_with_google"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="23dp"
        android:text="@string/sign_in_with_google"
        app:layout_constraintBottom_toTopOf="@+id/welcome_screen_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/welcome_screen_sign_in_button"
        app:layout_constraintTop_toBottomOf="@+id/welcome_screen_password_field" />



    <TextView
        android:id="@+id/first_time_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/actor"
        android:text="@string/first_time_here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/welcome_screen_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="15dp"
        android:text="@string/register"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>